# dockerdump

./: Cargo.toml  README.md
src/: clean.rs  fetch.rs  main.rs
src/search/: browse.rs  io.rs  menu.rs  metadata.rs  mod.rs
src/view/: extract.rs
